fix word img align
fix word img align

--- a/yemian/assets/css/main.css
+++ b/yemian/assets/css/main.css
@@ -14,7 +14,7 @@
 		border: 0;
 		font-size: 100%;
 		font: inherit;
-		vertical-align: baseline;
+		vertical-align: middle;
 	}
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -2491,7 +2491,7 @@
 			}
 
 				ul.icons li:last-child {
-					padding-right: 0 !important;
+/*					padding-right: 0 !important;*/
 				}
 
 				ul.icons li .icon:before {
